tests report uses patternfly

--- a/data/templates/jenkins_report.html
+++ b/data/templates/jenkins_report.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'pattern_base.html' %}
 {% set title = 'Test Report' %}
 
 {% block title %}{{title}}{% endblock %}
